# assemblyai

./: .gitignore  README.md  main.py  package-lock.json  package.json  parser.py  pyproject.toml  requirements.txt  thumbnails.py
.github/workflows/: testing.yaml
api/: app.py  models.py  requirements.txt  sample_config.py
api/stream2tweet/: stream.py
api/tube2blog/: api.py  assemblyai.py  cohere.py  downloader.py  downloader2.py  ghost.py  huggingface.py  parser.py  worker.py
api/utils/: YTStats.py  youtube.py
system/: app.service  nginx.default  streamline-celery.conf
tests/: test_api.py  test_downloader.py
tests/data/: analysis.json  bullets.json  bullets_verbose.json  headline.json  paragraph.json  summary.json
tube2blog/: api.py  downloader.py  ghost.py  parser.py  sample_config.py  utils.py  worker.py
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  index.css
ui/src/components/: Editor.js  VideoChooser.js
ui/src/screens/: ChannelStep.js  ChooseVideosStep.js  Steps.js  UsernameStep.js
