[tool.poetry]
name = "tube2blog"
version = "0.1.0"
description = ""
authors = ["Franz Gusto <franz@rungalileo.io>"]
readme = "README.md"
packages = [{include = "tube2blog"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"
requests = "^2.10"
pytube = "^12.1.0"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
